--- a/main.html
+++ b/main.html
@@ -12,19 +12,19 @@
 	<!-- the entire body must be written by student -->
 	<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
-			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class=".first-slide"
 				aria-current="true" aria-label="Slide 1"></button>
-			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" class=".second-slide"
 				aria-label="Slide 2"></button>
-			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" class=".third-slide"
 				aria-label="Slide 3"></button>
-			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" class=".fourth-slide"
 				aria-label="Slide 4"></button>
-			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="4" class=".fifth-slide"
 				aria-label="Slide 5"></button>
 		</div>
 		<div class="carousel-inner">
-			<div class="carousel-item active" data-bs-interval="10000">
+			<div class="carousel-item first-slide" data-bs-interval="10000">
 				<img src="./la.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>Los Angeles</h5>
@@ -60,15 +60,15 @@
 				</div>
 			</div>
 		</div>
+		<button class="glyphicon-chevron-left" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+			<span class="glyphicon-chevron-left-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+		  </button>
+		  <button class="glyphicon-chevron-right" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+			<span class="glyphicon-chevron-right-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Next</span>
+		  </button>
 	</div>
-	<a class="left carousel-control" href="#myCarousel" data-slide="prev">
-		<span class="glyphicon glyphicon-chevron-left"></span>
-		<span class="sr-only">Previous</span>
-	</a>
-	<a class="right carousel-control" href="#myCarousel" data-slide="next">
-		<span class="glyphicon glyphicon-chevron-right"></span>
-		<span class="sr-only">Next</span>
-	</a>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
