--- a/main.html
+++ b/main.html
@@ -10,35 +10,35 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+	<div id="myCarousel" class="carousel slide" data-bs-ride="false">
 		<div class="carousel-indicators">
-			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class=".first-slide"
+			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
 				aria-current="true" aria-label="Slide 1"></button>
-			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" class=".second-slide"
+			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1"
 				aria-label="Slide 2"></button>
-			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" class=".third-slide"
+			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2"
 				aria-label="Slide 3"></button>
-			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" class=".fourth-slide"
+			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3"
 				aria-label="Slide 4"></button>
-			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="4" class=".fifth-slide"
+			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="4"
 				aria-label="Slide 5"></button>
 		</div>
 		<div class="carousel-inner">
-			<div class="carousel-item first-slide" data-bs-interval="10000">
+			<div class="carousel-item">
 				<img src="./la.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>Los Angeles</h5>
 					<p>LA is always so much fun!</p>
 				</div>
 			</div>
-			<div class="carousel-item" data-bs-interval="2000">
+			<div class="carousel-item">
 				<img src="./chicago.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>Chicago</h5>
 					<p>Thank you, Chicago!</p>
 				</div>
 			</div>
-			<div class="carousel-item">
+			<div class="carousel-item active">
 				<img src="./ny.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>New York</h5>
@@ -46,28 +46,30 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="./ny.jpg" class="d-block w-100" alt="...">
+				<img src="./paris.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>New York</h5>
-					<p>We love the Big Apple!</p>
+					<h5>Paris</h5>
+					<p>We love Paris!</p>
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="./ny.jpg" class="d-block w-100" alt="...">
+				<img src="./london.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>New York</h5>
-					<p>We love the Big Apple!</p>
+					<h5>London</h5>
+					<p>We love London!</p>
 				</div>
 			</div>
 		</div>
-		<button class="glyphicon-chevron-left" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-			<span class="glyphicon-chevron-left-icon" aria-hidden="true"></span>
+		<button class="glyphicon-chevron-left" type="button" data-bs-target="#myCarousel"
+			data-bs-slide="prev">
+			<span class="left" aria-hidden="true"></span>
 			<span class="visually-hidden">Previous</span>
-		  </button>
-		  <button class="glyphicon-chevron-right" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-			<span class="glyphicon-chevron-right-icon" aria-hidden="true"></span>
+		</button>
+		<button class="glyphicon-chevron-right" type="button" data-bs-target="#myCarousel"
+			data-bs-slide="next">
+			<span class="right" aria-hidden="true"></span>
 			<span class="visually-hidden">Next</span>
-		  </button>
+		</button>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
