--- a/main.html
+++ b/main.html
@@ -24,35 +24,35 @@
 				aria-label="Slide 5"></button>
 		</div>
 		<div class="carousel-inner">
-			<div class="carousel-item">
+			<div class="carousel-item first-slide">
 				<img src="./la.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>Los Angeles</h5>
 					<p>LA is always so much fun!</p>
 				</div>
 			</div>
-			<div class="carousel-item">
+			<div class="carousel-item second-slide">
 				<img src="./chicago.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>Chicago</h5>
 					<p>Thank you, Chicago!</p>
 				</div>
 			</div>
-			<div class="carousel-item active">
+			<div class="carousel-item third-slide active">
 				<img src="./ny.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>New York</h5>
 					<p>We love the Big Apple!</p>
 				</div>
 			</div>
-			<div class="carousel-item">
+			<div class="carousel-item fourth-slide">
 				<img src="./paris.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>Paris</h5>
 					<p>We love Paris!</p>
 				</div>
 			</div>
-			<div class="carousel-item">
+			<div class="carousel-item fifth-slide">
 				<img src="./london.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>London</h5>
@@ -62,13 +62,13 @@
 		</div>
 		<button class="glyphicon-chevron-left" type="button" data-bs-target="#myCarousel"
 			data-bs-slide="prev">
-			<span class="left" aria-hidden="true"></span>
-			<span class="visually-hidden">Previous</span>
+			<span class="left crousel-control" aria-hidden="true"></span>
+			<cy class="click">Previous</cy>
 		</button>
 		<button class="glyphicon-chevron-right" type="button" data-bs-target="#myCarousel"
 			data-bs-slide="next">
-			<span class="right" aria-hidden="true"></span>
-			<span class="visually-hidden">Next</span>
+			<span class="right crousel-control" aria-hidden="true"></span>
+			<cy class="click">Next</cy>
 		</button>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
