--- a/main.html
+++ b/main.html
@@ -60,16 +60,15 @@
 				</div>
 			</div>
 		</div>
-		<button class="glyphicon-chevron-left" type="button" data-bs-target="#myCarousel"
-			data-bs-slide="prev">
-			<span class="left crousel-control" aria-hidden="true"></span>
-			<cy class="click">Previous</cy>
-		</button>
-		<button class="glyphicon-chevron-right" type="button" data-bs-target="#myCarousel"
-			data-bs-slide="next">
-			<span class="right crousel-control" aria-hidden="true"></span>
-			<cy class="click">Next</cy>
-		</button>
+		<!-- <span class="glyphicon glyphicon-chevron-left"></span> -->
+		<button class="glyphicon glyphicon-chevron-left carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+			<span class="left  carousel-control-prev-icon" aria-hidden="false"></span>
+			<span class="visually-hidden">Previous</span>
+		  </button>
+		  <button class="glyphicon glyphicon-chevron-right carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+			<span class="right carousel-control-next-icon" aria-hidden="false"></span>
+			<span class="visually-hidden">Next</span>
+		  </button>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
