--- a/main.html
+++ b/main.html
@@ -62,11 +62,11 @@
 		</div>
 		<!-- <span class="glyphicon glyphicon-chevron-left"></span> -->
 		<button class="glyphicon glyphicon-chevron-left carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-			<span class="left  carousel-control-prev-icon" aria-hidden="false"></span>
+			<span class="left  carousel-control" aria-hidden="false"></span>
 			<span class="visually-hidden">Previous</span>
 		  </button>
 		  <button class="glyphicon glyphicon-chevron-right carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-			<span class="right carousel-control-next-icon" aria-hidden="false"></span>
+			<span class="right carousel-control" aria-hidden="false"></span>
 			<span class="visually-hidden">Next</span>
 		  </button>
 	</div>
